--- a/Index.html
+++ b/Index.html
@@ -1,18 +1,15 @@
 <html>
+  <!-- html is a element and is a tag -->
+  <!-- Crtl + S is save = Alt + L + O is live server -->
 
-<head>
-  <title> About Me </title>
-  
-</head>
+  <head>
+    <title>About Me</title>
+  </head>
 
-<body>
+  <body>
+    <h1>Ernesto Mireles</h1>
+    <p>Hello my name is Ernesto.</p>
+  </body>
 
-  <h1> Ernesto Mireles  </h1>
-  
-</body>
-
-<footer>
-  
-</footer>
-  
+  <footer></footer>
 </html>
