--- a/Index.html
+++ b/Index.html
@@ -1,15 +1,7 @@
 <html>
-  <!-- html is a element and is a tag -->
-  <!-- Crtl + S is save = Alt + L + O is live server -->
-
   <head>
-    <title>About Me</title>
+    <title>Ernesto's Site</title>
   </head>
-
-  <body>
-    <h1>Ernesto Mireles</h1>
-    <p>Hello my name is Ernesto.</p>
-  </body>
-
-  <footer></footer>
+  <h1>Ernesto Mireles</h1>
+  <p>Hi my name is Ernesto</p>
 </html>
