--- a/index.html
+++ b/index.html
@@ -4,4 +4,6 @@
   </head>
   <h1>Ernesto Mireles</h1>
   <p>Hi my name is Ernesto</p>
+  <img src="images/ERNESTOMIRELES.jpg" alt="ERNESTOMIRELES" />
+  <body></body>
 </html>
