--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   </head>
   <h1>Ernesto Mireles</h1>
   <p>Hi my name is Ernesto</p>
-  <img src="images/ERNESTOMIRELES.jpg" alt="ERNESTOMIRELES" />
-  <body></body>
+  <img
+    src="images/ERNESTOMIRELES.jpg"
+    alt="Not Found ErnestoMireles.PNG"
+    width="250"
+    height="300"
+  />
+  <body>
+    <br />
+    <a href="https://www.linkedin.com/in/ernesto-mireles-2aba66303/"
+      >Follow me on LinkedIn</a
+    >
+  </body>
 </html>
