--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,9 @@
   />
   <body>
     <br />
-    <a href="https://www.linkedin.com/in/ernesto-mireles-2aba66303/"
+    <a
+      href="https://www.linkedin.com/in/ernesto-mireles-2aba66303/"
+      target="_blank"
       >Follow me on LinkedIn</a
     >
   </body>
