navbar has been added

--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
 
     <!--Internal Css is below where it's used in the html document where it affects all of the p with blueviolet color -->
     <!--* means all is gonna be selected border covers all in a border with a solid,dotted and line -->
+
     <style>
       * {
         /* border: 1px solid black; */
@@ -19,12 +20,17 @@
   </head>
 
   <body>
-    <!--Style attribute that adds styles to elements. Such as color, font and size-->
-    <!--In line 12 in line CSS know as Cascading Style Sheets. For styling the strcuture of the html page  -->
-    <!-- is center tag is used to align text to center-->
     <center>
-      <h1 style="color: red">Ernesto Mireles</h1>
-      <p>Hi my name is Ernesto</p>
+      <nav>
+        <a href="index.html">About Me</a>
+        <a href="pages/projects.html">Projects</a>
+        <a href="pages/contact.html">Contact Me</a>
+      </nav>
+      <!--Style attribute that adds styles to elements. Such as color, font and size-->
+      <!--In line 12 in line CSS know as Cascading Style Sheets. For styling the strcuture of the html page  -->
+      <!-- is center tag is used to align text to center-->
+      <h1 style="color: rgb(0, 0, 0)">Ernesto Mireles</h1>
+      <p>Hello my name is Ernesto.</p>
 
       <!--img tag thats embed an image in a web page/ alt is the name it will show when the picture isnt available.-->
       <img src="images/ERNESTOMIRELES.jpg" alt="Not Found ErnestoMireles.jpg" />
@@ -34,6 +40,7 @@
       <!--The a attribute specifies where to open the linked document:-->
       <!-- The attribute _blink tells the browser to open a new windows.-->
       <!--Target attribute used to specify where a linked document will open-->
+      <p></p>
       <a
         href="https://www.linkedin.com/in/ernesto-mireles-2aba66303/"
         target="_blank"
@@ -43,8 +50,5 @@
   </body>
 
   <!-- contact information element that contains -->
-  <footer>
-    <p></p>
-    <a href="emireles@icstars.org">emireles@icstars.org</a>
-  </footer>
+  <footer></footer>
 </html>
