--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Ernesto's Projects</title>
     <h1>Projects</h1>
     <link rel="stylesheet" href="../style.css" />
   </head>
