--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Ernesto's Contact</title>
     <h1>Contact</h1>
     <link rel="stylesheet" href="../style.css" />
   </head>
