--- a/Index.html
+++ b/Index.html
@@ -22,10 +22,11 @@
   <body>
     <center>
       <nav>
-        <a href="index.html">About Me</a>
-        <a href="pages/projects.html">Projects</a>
-        <a href="pages/contact.html">Contact Me</a>
+        <a href="../index.html">About Me</a>
+        <a href="../pages/projects.html">Projects</a>
+        <a href="../pages/contact.html">Contact Me</a>
       </nav>
+
       <!--Style attribute that adds styles to elements. Such as color, font and size-->
       <!--In line 12 in line CSS know as Cascading Style Sheets. For styling the strcuture of the html page  -->
       <!-- is center tag is used to align text to center-->
