--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,9 +7,9 @@
 
   <body>
     <nav>
-      <a href="/index.html">About Me</a>
-      <a href="/pages/projects.html">Projects</a>
-      <a href="/pages/contact.html">Contact Me</a>
+      <a href="../index.html">About Me</a>
+      <a href="../pages/projects.html">Projects</a>
+      <a href="../pages/contact.html">Contact Me</a>
     </nav>
   </body>
 
