--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
       }
     </style>
     <!--Connector that adds the css file into the html document. -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
 
   <body>
