--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
       }
     </style>
     <!--Connector that adds the css file into the html document. -->
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <center>
       <nav>
-        <a href="../index.html">About Me</a>
-        <a href="../pages/projects.html">Projects</a>
-        <a href="../pages/contact.html">Contact Me</a>
+        <a href="index.html">About Me</a>
+        <a href="pages/projects.html">Projects</a>
+        <a href="pages/contact.html">Contact Me</a>
       </nav>
 
       <!--Style attribute that adds styles to elements. Such as color, font and size-->
       <!--In line 12 in line CSS know as Cascading Style Sheets. For styling the strcuture of the html page  -->
       <!-- is center tag is used to align text to center-->
       <br />
-      <h1 style="color: rgb(0, 0, 0)">Ernesto Mireles</h1>
+      <h1>Ernesto Mireles</h1>
       <p>Hello my name is Ernesto.</p>
 
       <!--img tag thats embed an image in a web page/ alt is the name it will show when the picture isnt available.-->
