--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,14 +2,14 @@
   <head>
     <title>Ernesto's Projects</title>
     <h1>Projects</h1>
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="style2.css" />
   </head>
 
   <body>
     <nav>
-      <a href="./index.html">About Me</a>
-      <a href="/pages/projects.html">Projects</a>
-      <a href="/pages/contact.html">Contact Me</a>
+      <a href="../index.html">About Me</a>
+      <a href="../pages/projects.html">Projects</a>
+      <a href="../pages/contact.html">Contact Me</a>
     </nav>
   </body>
 </html>
