--- a/Index.html
+++ b/Index.html
@@ -22,9 +22,11 @@
   <body>
     <center>
       <nav>
-        <a href="index.html">About Me</a>
-        <a href="pages/projects.html">Projects</a>
-        <a href="pages/contact.html">Contact Me</a>
+        <nav>
+          <a href="index.html" class="navbar">About Me</a>
+          <a href="pages/projects.html" class="navbar">Projects</a>
+          <a href="pages/contact.html" class="navbar">Contact Me</a>
+        </nav>
       </nav>
 
       <!--Style attribute that adds styles to elements. Such as color, font and size-->
@@ -32,11 +34,14 @@
       <!-- is center tag is used to align text to center-->
       <br />
       <h1>Ernesto Mireles</h1>
-      <p>Hello my name is Ernesto.</p>
+      <p class="invs">Hello my name is Ernesto.</p>
 
       <!--img tag thats embed an image in a web page/ alt is the name it will show when the picture isnt available.-->
-      <img src="images/ERNESTOMIRELES.jpg" alt="Not Found ErnestoMireles.jpg" />
+      <!-- <img src="images/ERNESTOMIRELES.jpg" alt="Not Found ErnestoMireles.jpg" /> -->
 
+      <div>
+        <div class="Ernesto"></div>
+      </div>
       <!--Break tag is below, which in short breaks the line to start a whole new line to start, used for formatting, but not recommended-->
       <br />
       <!--The a attribute specifies where to open the linked document:-->
@@ -46,6 +51,7 @@
       <a
         href="https://www.linkedin.com/in/ernesto-mireles-2aba66303/"
         target="_blank"
+        class="colors"
         >Follow me on LinkedIn</a
       >
     </center>
