--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,15 +2,19 @@
   <head>
     <title>Ernesto's Contact</title>
     <h1>Contact</h1>
-    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
 
   <body>
     <nav>
-      <a href="../index.html">About Me</a>
-      <a href="projects.html">Projects</a>
-      <a href="contact.html">Contact Me</a>
+      <nav>
+        <a href="../index.html" class="navbar">About Me</a>
+        <a href="projects.html" class="navbar">Projects</a>
+        <a href="contact.html" class="navbar">Contact Me</a>
+      </nav>
     </nav>
+    <p>.</p>
+    <br />
   </body>
 
   <footer></footer>
