--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,14 +2,16 @@
   <head>
     <title>Ernesto's Projects</title>
     <h1>Projects</h1>
-    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
 
   <body>
     <nav>
-      <a href="../index.html">About Me</a>
-      <a href="projects.html">Projects</a>
-      <a href="contact.html">Contact Me</a>
+      <nav class="colors">
+        <a href="../index.html" class="navbar" ,>About Me</a>
+        <a href="projects.html" class="navbar">Projects</a>
+        <a href="contact.html" class="navbar">Contact Me</a>
+      </nav>
     </nav>
   </body>
 </html>
