--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,15 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ernesto's Projects</title>
     <h1>Projects</h1>
     <link rel="stylesheet" href="../style.css" />
   </head>
-
   <body>
-    <nav>
-      <a href="../index.html" class="navbar" ,>About Me</a>
-      <a href="projects.html" class="navbar">Projects</a>
-      <a href="contact.html" class="navbar">Contact Me</a>
+    <nav class="navbar">
+      <a href="../index.html" class="sidebar">About Me</a>
+      <a href="projects.html" class="sidebar">Projects</a>
+      <a href="contact.html" class="sidebar">Contact Me</a>
     </nav>
   </body>
 </html>
