Projects page updated....

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ernesto's Projects</title>
     <h1>Projects</h1>
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../style2.css" />
   </head>
   <body>
     <nav class="navbar">
@@ -13,5 +13,41 @@
       <a href="projects.html" class="sidebar">Projects</a>
       <a href="contact.html" class="sidebar">Contact Me</a>
     </nav>
+    <br />
+    <h2 class="presentation">Sprint 1 Presentation</h2>
+    <div class="carousel">
+      <div class="slider">
+        <div class="slide">
+          <img src="../images/1.PNG" alt="" class="display" />
+        </div>
+        <div class="slide">
+          <img src="../images/2.PNG" alt="" class="display" />
+        </div>
+        <div class="slide">
+          <img src="../images/3.PNG" alt="" class="display" />
+        </div>
+        <div class="slide">
+          <img src="../images/4.PNG" alt="" class="display" />
+        </div>
+        <div class="slide">
+          <img src="../images/5.PNG" alt="" class="display" />
+        </div>
+        <div class="slide">
+          <img src="../images/6.PNG" alt="" class="display" />
+        </div>
+        <div class="slide">
+          <img src="../images/7.PNG" alt="" class="display" />
+        </div>
+      </div>
+    </div>
+    <div class="button-container">
+      <button class="left">left</button>
+      <button class="right">right</button>
+    </div>
+    <h2 class="techqueria">Techqueria Flyer</h2>
+    <div>
+      <img src="../images/yo.PNG" alt="" class="tech" />
+    </div>
+    <script src="../java.js"></script>
   </body>
 </html>
