--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ernesto's Contact</title>
     <h1>Contact</h1>
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../style3.css" />
   </head>
   <body>
     <nav class="navbar">
@@ -13,5 +13,33 @@
       <a href="projects.html" class="sidebar">Projects</a>
       <a href="contact.html" class="sidebar">Contact Me</a>
     </nav>
+    <header></header>
+
+    <div class="grid-container">
+      <div class="pic1">
+        <img src="../pictures/1.jpg" alt="big-chug" />
+      </div>
+      <div class="pic2">
+        <img src="../pictures/2.jpg" alt="big-chug" />
+      </div>
+      <div class="pic3">
+        <img src="../pictures/3.jpg" alt="big-chug" />
+      </div>
+      <div class="pic4">
+        <img src="../pictures/4.jpg" alt="big-chug" />
+      </div>
+      <div class="pic5">
+        <img src="../pictures/5.jpg" alt="big-chug" />
+      </div>
+      <div class="pic6">
+        <img src="../pictures/6.jpg" alt="big-chug" />
+      </div>
+      <div class="pic7">
+        <img src="../pictures/7.jpg" alt="big-chug" />
+      </div>
+      <div class="pic8">
+        <img src="../pictures/8.jpg" alt="big-chug" />
+      </div>
+    </div>
   </body>
 </html>
